fixed getData function

--- a/notebooks/points-graphs.ipynb
+++ b/notebooks/points-graphs.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "cb094269-5530-40f3-bfba-c224b1b292b4",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "with open('../data/obj/Eros Gaskell 50k poly.obj', 'r') as f:\n",
+    "with open('../data/obj/Psyche Hanuš.obj', 'r') as f:\n",
     "    file = f.read()\n",
     "    file = file.splitlines()\n",
     "       "
@@ -43,29 +43,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "2c61740b-94ee-44a5-8a2f-d602b30ee0b1",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "IOPub data rate exceeded.\n",
-      "The Jupyter server will temporarily stop sending output\n",
-      "to the client in order to avoid crashing it.\n",
-      "To change this limit, set the config variable\n",
-      "`--ServerApp.iopub_data_rate_limit`.\n",
-      "\n",
-      "Current values:\n",
-      "ServerApp.iopub_data_rate_limit=1000000.0 (bytes/sec)\n",
-      "ServerApp.rate_limit_window=3.0 (secs)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vfs = []\n",
     "for q in file:\n",
@@ -74,11 +58,15 @@
     "        \n",
     "verts = []\n",
     "faces = []\n",
+    "\n",
+    "for i in range(vfs.count('')):\n",
+    "    vfs.remove('')\n",
+    "\n",
     "for i in range(len(vfs)):\n",
     "    vfs[i] = vfs[i].split(' ')\n",
+    "    \n",
     "    for j in range(vfs[i].count('')):\n",
     "        vfs[i].remove('')\n",
-    "    print(vfs)\n",
     "    if vfs[i][0] == 'v':\n",
     "        verts.append(vfs[i][1:])\n",
     "    \n",
@@ -89,13 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "d27b74f5-e9e9-469e-b7f7-e54e04ba5146",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -1105,7 +1089,7 @@
        " ...]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
