add presentation notebook

--- a/notebooks/presentation_notebook.ipynb
+++ b/notebooks/presentation_notebook.ipynb
@@ -187,26 +187,18 @@
    "id": "5193dbfe-6eec-457a-8d8b-5bf25faf9db7",
    "metadata": {},
    "source": [
-    "### Next, we worked on creating a function that would plot the asteroid from just the data we'd read. This function creates a 3-D, interactive plot from the previous organized data with unique titles and axes."
+    "### Next, we worked on creating a function that would plot the asteroid from just the data we'd read. This function creates a 3-D, interactive plot from the previous organized data with unique titles and axes. These plots also display the calculated center of mass, which will be important for later sphericity calculations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "d23445d3-d285-41d6-af66-ea9e3e53980b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "UsageError: unrecognized arguments: # makes figure interactive\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from plots import makePlot # import our plotting function\n",
-    "%matplotlib widget # makes figure interactive"
+    "%matplotlib widget "
    ]
   },
   {
